# router-manager

./: .gitignore  Dockerfile  README.md  pyproject.toml
src/: main.py
src/apps/router_controller/: __init__.py  manager.py  models.py  router.py  utils.py
src/core/: lifespan.py  routers.py  settings.py
src/env/: .env.template
