[tool.poetry]
name = "router-manager"
version = "0.1.0"
description = ""
authors = ["Bakminstof <Bakminstof@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
httpx = "^0.27.0"
pydantic = "^2.8.2"
pydantic-settings = "^2.4.0"
fastapi = "^0.111.1"
hypercorn = "^0.17.3"


[tool.poetry.group.dev.dependencies]
isort = "^5.13.2"
mypy = "^1.11.1"
flake8 = "^7.1.0"
flake8-bugbear = "^24.4.26"
flake8-pie = "^0.16.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
